# qsim

./: .gitignore  AUDIT_CERTIFICATE.md  AUDIT_SUBMISSION_READY.md  BLACK_VAULT_SUCCESS_REPORT.md  CODEBASE_ANALYSIS.md  CONTRIBUTING.md  EXAMPLES_V2.md  MANIFEST.in  ORGANIZATION_COMPLETE.md  ORGANIZATION_REPORT.md  PROJECT_SUMMARY_V2.md  README.md  README_CLAUDE_V2.md  __init__.py  audit_trail.jsonl  auto_optimize.py  backup_20250715_020118.json  backup_20250715_020323.json  backup_20250715_030119.json  backup_20250715_030323.json  backup_20250715_040119.json  backup_20250715_040323.json  backup_20250715_050119.json  backup_20250715_050323.json  benchmark_victory_display.py  blockchain_integration_report.json  claude_analysis_agent.py  claude_analysis_agent_v2.py  claude_comprehensive_analysis_v2.json  claude_optimization_history.json  complete_performance_comparison.json  config.yaml  create_3d_nobel_visualization.py  create_insane_nobel_animation.py  create_nobel_visualization.py  create_ultimate_comprehensive_visualization.py  create_ultimate_showcase.py  demo_metrics_1752040687.json  demo_metrics_1752040717.json  demo_metrics_1752040747.json  (+59 more)
.github/workflows/: python-package.yml
benchmarks/results/: industry_benchmark_comparison.py  performance_comparison.py
benchmarks/suites/: hamiltonian_simulation.py  optimized_hamiltonian_system.py
config/: .pre-commit-config.yaml  audit-readiness.json  requirements.txt
config/templates/: enterprise_requirements.txt  requirements.txt  zkaedi_requirements.txt
docs/: LICENSE  META_ENGINE_GUIDE.md  USE_CASES.md  structure.md
docs/guides/: SESSION_COMPLETION_README.md
docs/reports/: AUDIT_PACK_FILES_CREATED.md  AUDIT_SUBMISSION_PACKAGE.md  COMPREHENSIVE_SESSION_REPORT.md  ORGANIZATION_SUCCESS_REPORT.md
examples/: meta_engine_example.py
examples/advanced/: ultimate_ecosystem_showcase.py
examples/basic/: zkaedi_example.py
scripts/analysis/: auto_optimize.py  claude_analysis_agent.py  session_achievement_dashboard.py  validate_organization.py  visual_coverage_summary.py
scripts/setup/: organize_everything.py
src/: __init__.py
src/hmodelz/: __init__.py  hmodelz_cli.py
src/hmodelz/core/: __init__.py  h_model_z_black_vault_framework.py  h_model_z_flash_loan_analyzer.py  h_model_z_mathematical_framework.py  hamiltonian_simulation.py
src/hmodelz/core/modules/: __init__.py  blockchain.py  data_structures.py  exceptions.py  html_interface.py  model_manager.py  performance.py  security.py  testing.py  vector_embedding.py
src/hmodelz/engines/: __init__.py  enterprise_scaling_framework.py  meta_signal_chassis.py
src/hmodelz/frameworks/: __init__.py  h_model_z_enterprise_grade_hierarchical_ecosystem.py  h_model_z_next_generation_enterprise_ecosystem.py  h_model_z_quantum_chaos_defi_gaming_framework.py  h_model_z_ultimate_comprehensive_framework.py  h_model_z_ultimate_event_driven_ecosystem.py  h_model_z_ultimate_integrated_ecosystem.py
src/hmodelz/interfaces/: __init__.py
src/hmodelz/schema/: __init__.py  quick_schema_overview.py  schema_manager.py  schema_oneliner.py  schema_summary_display.py
src/hmodelz/utils/: __init__.py
tests/: __init__.py  conftest.py  test_basic.py
tests/unit/: __init__.py  h_model_z_enhanced_diagnostics.py  h_model_z_test_framework.py  test_enterprise_scaling_framework.py  test_h_model_omnisolver.py  test_h_model_z_black_vault_framework.py  test_h_model_z_flash_loan_analyzer.py  test_h_model_z_mathematical_framework.py  test_meta_signal_chassis.py
tools/visualization/: benchmark_victory_display.py  create_3d_nobel_visualization.py  create_insane_nobel_animation.py  create_nobel_visualization.py  create_ultimate_comprehensive_visualization.py  insane_realtime_nobel_animation.py
