[tool.poetry]
name = "qsim"
version = "0.1.0"
description = "Quantum simulation tools."
authors = ["zkedii <your_email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.pytest.ini_options]
addopts = "-v --maxfail=1 --disable-warnings"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"