[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hmodelz"
version = "1.0.0"
description = "Enterprise-grade performance optimization framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "H_MODEL_Z Team", email = "contact@hmodelz.dev"}
]
keywords = [
    "optimization",
    "performance",
    "quantum-simulation",
    "blockchain",
    "ai",
    "enterprise",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21.0",
    "numba>=0.56.0",
    "scipy",
    "psutil>=5.9.0,<6.0.0",
    "anthropic>=0.8.0,<1.0.0",
    "aiohttp>=3.8.0,<4.0.0",
    "flask>=2.0.0",
    "flask-limiter>=2.0.0",
    "websockets>=10.0",
    "PyJWT>=2.0.0",
    "prometheus-client>=0.12.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "streamlit>=1.10.0",
    "plotly>=5.0.0",
    "altair>=4.2.0",
    "click>=8.0.0,<9.0.0",
    "pyyaml>=6.0,<7.0",
    "requests>=2.25.0",
    "cryptography>=3.4.0",
    "gitpython>=3.1.0,<4.0.0",
    "rich>=13.0.0,<14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "pytest-asyncio>=0.21.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "pre-commit>=2.15.0",
]
gpu = [
    "torch>=1.9.0",
    "cupy>=9.0.0",
]
distributed = [
    "mpi4py>=3.1.0",
    "dask>=2021.6.0",
]

[project.urls]
Homepage = "https://github.com/zkaedii/qsim"
Documentation = "https://github.com/zkaedii/qsim/docs"
Repository = "https://github.com/zkaedii/qsim"
"Bug Tracker" = "https://github.com/zkaedii/qsim/issues"

[project.scripts]
hmodelz = "hmodelz.hmodelz_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=hmodelz --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"
testpaths = [
    "tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/hmodelz"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E266", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg",
]
max-complexity = 10
